--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <dev>Description</dev
     
     #Hello I am learning Github
-    From the Freecode Camp
+    From the Freecode Camp...which was free..
     Which was for the beginners..
     
     <dev>..END..</dev>
